--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=Banking-Application
+spring.datasource.url=jdbc:mysql://localhost:3306/Banking_app
+spring.datasource.username=root
+spring.datasource.password=Prateek.2003
+spring.jpa.hibernate.ddl-auto=update
+
